@@ -37,4 +37,5 @@ Added Firebase Distribution\n
         fixed profile saving\n
         added ability to change audio output in videocall\n
         added telemedicine flag to slots\n
-        version 23\n
+        changed default doctor\n
+        version 24\n
